# shcoll

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.cray  README.md  configure.ac  package.m4
spec/: Makefile  broadcast-loop.c  broadcast.c  collect.c
src/: Makefile.am  alltoall.c  alltoall.h  alltoalls.c  alltoalls.h  barrier.c  barrier.h  broadcast.c  broadcast.h  collect.c  collect.h  fcollect.c  fcollect.h  global.h  reduction-inline.c  reduction-inline.h  reduction.c  reduction.h  shcoll.h
src/shcoll/: alltoall.h  alltoalls.h  barrier.h  broadcast.h  collect.h  common.h  compat.h  fcollect.h  reduction.h
src/util/: bithacks.c  bithacks.h  broadcast-size.c  broadcast-size.h  memfence.h  rotate.c  rotate.h  scan.c  scan.h  trees.c  trees.h  wraper.h  wraper_1_3.h  wrapper.h
test/: Makefile  alltoall_test.c  alltoalls_test.c  barrier_test.c  broadcast_test.c  collect_test.c  fcollect_test.c  reduction_test.c
test/util/: debug.h  run.h  util.h
tests/: Makefile.am  alltoall_test.c  alltoalls_test.c  barrier_test.c  broadcast_test.c  collect_test.c  fcollect_test.c  reduction_test.c
tests/util/: debug.h  run.h  util.h
